# serializer version: 1
# name: test_complex_sse_schema
  '''
  {
    "info": {
      "title": "SSE Complex Pydantic <odels",
      "version": "1.0"
    },
    "openapi": "3.2.0",
    "paths": {
      "/api/v1/complex": {
        "get": {
          "operationId": "getBuildControllerLocalsSsecontrollerApiV1Complex",
          "responses": {
            "200": {
              "description": "OK",
              "headers": {
                "Cache-Control": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                },
                "X-Accel-Buffering": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                },
                "Connection": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                }
              },
              "content": {
                "text/event-stream": {
                  "itemSchema": {
                    "anyOf": [
                      {
                        "$ref": "#/components/schemas/_UserEvent"
                      },
                      {
                        "$ref": "#/components/schemas/_PaymentEvent"
                      }
                    ]
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "_Payment": {
          "properties": {
            "amount": {
              "type": "integer",
              "title": "Amount"
            },
            "currency": {
              "type": "string",
              "title": "Currency"
            }
          },
          "type": "object",
          "required": [
            "amount",
            "currency"
          ],
          "title": "_Payment"
        },
        "_PaymentEvent": {
          "properties": {
            "event": {
              "type": "string",
              "const": "payment",
              "title": "Event",
              "default": "payment"
            },
            "data": {
              "type": "string",
              "contentMediaType": "application/json",
              "contentSchema": {
                "$ref": "#/components/schemas/_Payment"
              },
              "title": "Data"
            }
          },
          "type": "object",
          "required": [
            "data"
          ],
          "title": "_PaymentEvent"
        },
        "_UserEvent": {
          "properties": {
            "event": {
              "type": "string",
              "const": "user",
              "title": "Event",
              "default": "user"
            },
            "id": {
              "type": "integer",
              "title": "Id"
            },
            "data": {
              "type": "string",
              "title": "Data"
            }
          },
          "type": "object",
          "required": [
            "id",
            "data"
          ],
          "title": "_UserEvent"
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_overridden_sse_schema
  '''
  {
    "info": {
      "title": "SSE Overridden Pydantic models",
      "version": "2.0"
    },
    "openapi": "3.2.0",
    "paths": {
      "/api/v1/overridden": {
        "get": {
          "operationId": "getBuildControllerLocalsSsecontrollerApiV1Overridden",
          "responses": {
            "200": {
              "description": "OK",
              "headers": {
                "Cache-Control": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                },
                "X-Accel-Buffering": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                },
                "Connection": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                }
              },
              "content": {
                "text/event-stream": {
                  "itemSchema": {
                    "$ref": "#/components/schemas/OverriddenEvent"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "OverriddenEvent": {
          "properties": {
            "data": {
              "contentSchema": {
                "type": "string"
              }
            }
          },
          "title": "OverriddenEvent",
          "example": {
            "value": "data: test"
          }
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
# name: test_sse_schema
  '''
  {
    "info": {
      "title": "SSE Test",
      "version": "1.0"
    },
    "openapi": "3.2.0",
    "paths": {
      "/api/v1/sse": {
        "get": {
          "operationId": "getBuildControllerLocalsSsecontrollerApiV1Sse",
          "responses": {
            "200": {
              "description": "OK",
              "headers": {
                "Cache-Control": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                },
                "X-Accel-Buffering": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                },
                "Connection": {
                  "schema": {
                    "type": "string"
                  },
                  "required": true
                }
              },
              "content": {
                "text/event-stream": {
                  "itemSchema": {
                    "$ref": "#/components/schemas/SSEvent"
                  }
                }
              }
            },
            "422": {
              "description": "Raised when returned response does not match the response schema",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            },
            "406": {
              "description": "Raised when provided `Accept` header cannot be satisfied",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ErrorModel"
                  }
                }
              }
            }
          },
          "deprecated": false
        }
      }
    },
    "components": {
      "schemas": {
        "SSEvent": {
          "properties": {
            "data": {
              "type": "integer",
              "title": "Data"
            },
            "event": {
              "anyOf": [
                {
                  "type": "string"
                },
                {
                  "type": "null"
                }
              ],
              "title": "Event"
            },
            "id": {
              "anyOf": [
                {
                  "type": "integer"
                },
                {
                  "type": "string"
                },
                {
                  "type": "null"
                }
              ],
              "title": "Id"
            },
            "retry": {
              "anyOf": [
                {
                  "type": "integer"
                },
                {
                  "type": "null"
                }
              ],
              "title": "Retry"
            },
            "comment": {
              "anyOf": [
                {
                  "type": "string"
                },
                {
                  "type": "null"
                }
              ],
              "title": "Comment"
            }
          },
          "type": "object",
          "required": [
            "data"
          ],
          "title": "SSEvent"
        },
        "ErrorDetail": {
          "properties": {
            "msg": {
              "type": "string",
              "title": "Msg"
            },
            "type": {
              "type": "string",
              "title": "Type"
            },
            "loc": {
              "items": {
                "anyOf": [
                  {
                    "type": "integer"
                  },
                  {
                    "type": "string"
                  }
                ]
              },
              "type": "array",
              "title": "Loc"
            }
          },
          "type": "object",
          "required": [
            "msg"
          ],
          "title": "ErrorDetail",
          "description": "Base schema for error details description."
        },
        "ErrorModel": {
          "properties": {
            "detail": {
              "items": {
                "$ref": "#/components/schemas/ErrorDetail"
              },
              "type": "array",
              "title": "Detail"
            }
          },
          "type": "object",
          "required": [
            "detail"
          ],
          "title": "ErrorModel",
          "description": "Default error response schema.\n\nCan be customized.\nSee :ref:`customizing-error-messages` for more details."
        }
      },
      "securitySchemes": {}
    }
  }
  '''
# ---
